# ai-visibility

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTORS.txt  LICENSE  README.md  ai-productivity-measurement-plan.md  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.production.yml  manage.py  pyproject.toml
.claude/: settings.json
.devcontainer/: devcontainer.json
.envs/.local/: .django  .postgres
.github/workflows/: ci.yml  release.yml
ai_visibility/: conftest.py
ai_visibility/collectors/: apps.py  base.py  github.py  jira.py  models.py  newrelic.py  sonarqube.py  tasks.py
ai_visibility/collectors/migrations/: 0001_initial.py
ai_visibility/collectors/tests/: test_base.py  test_github.py  test_jira.py  test_newrelic.py  test_sonarqube.py  test_tasks.py
ai_visibility/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
ai_visibility/dashboards/: apps.py  services.py  urls.py  views.py
ai_visibility/dashboards/tests/: test_services.py  test_views.py
ai_visibility/metrics/: apps.py  models.py  services.py
ai_visibility/metrics/migrations/: 0001_initial.py  0002_seed_catalog.py  0003_metricsnapshot.py  0004_baseline.py  0005_seed_jira_metrics.py
ai_visibility/metrics/tests/: test_baseline.py  test_definitions.py  test_snapshots.py
ai_visibility/reports/: apps.py  roi.py  services.py  urls.py  views.py
ai_visibility/reports/tests/: test_report.py  test_roi.py
ai_visibility/static/js/: project.js
ai_visibility/surveys/: apps.py  models.py  services.py  tasks.py  urls.py  views.py
ai_visibility/surveys/migrations/: 0001_initial.py  0002_seed_templates.py
ai_visibility/surveys/tests/: factories.py  test_aggregation.py  test_models.py  test_services.py  test_views.py
ai_visibility/teams/: access.py  apps.py  forms.py  models.py  urls.py  views.py
ai_visibility/teams/management/commands/: seed_demo.py
ai_visibility/teams/migrations/: 0001_initial.py  0002_integrationconfig.py
ai_visibility/teams/tests/: factories.py  test_access.py  test_integrations.py  test_models.py  test_settings.py
ai_visibility/templates/: base.html
ai_visibility/templates/dashboards/: _base.html  _chart.html  _freshness.html  _guardrail.html  _metric_card.html  _metric_card_inner.html  _paired_panel.html  cost.html  impact.html  overview.html  utilization.html
ai_visibility/templates/reports/: monthly.html
ai_visibility/templates/surveys/: already.html  answer.html  done.html
ai_visibility/templates/teams/: settings.html
ai_visibility/tests/: test_health.py
ai_visibility/users/: adapters.py  apps.py  models.py  views.py
ai_visibility/users/migrations/: 0001_initial.py
ai_visibility/users/tests/: factories.py  test_admin.py  test_forms.py  test_managers.py  test_models.py  test_oauth_domain.py  test_tasks.py  test_urls.py  test_views.py
compose/production/django/: Dockerfile
compose/production/postgres/: Dockerfile
compose/production/traefik/: traefik.yml
config/: celery_app.py  health.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: DEPLOYMENT-STRATEGY.md  DEPLOYMENT.md  conf.py  howto.rst  index.rst  make.bat  users.rst
docs/plans/: 2026-07-16-ai-visibility-implementation.md
docs/specs/: 2026-07-16-ai-visibility-design.md
infra/ansible/: bootstrap.yml  deploy.yml  inventory.example.ini  rollback.yml
infra/ansible/group_vars/: all.yml.example
infra/ansible/templates/: env.j2
infra/terraform/: main.tf  outputs.tf  variables.tf  versions.tf
infra/terraform/envs/: arbisoft.tfvars.example
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
